--- a/Source/Core.EntityFramework/Core.EntityFramework.csproj
+++ b/Source/Core.EntityFramework/Core.EntityFramework.csproj
@@ -8,7 +8,7 @@
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>IdentityServer3.EntityFramework</RootNamespace>
-    <AssemblyName>IdentityServer3.EntityFramework</AssemblyName>
+    <AssemblyName>IdentityServer3.EntityFramework.MySql</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <SolutionDir Condition="$(SolutionDir) == '' Or $(SolutionDir) == '*Undefined*'">..\..\</SolutionDir>
