--- a/Source/Core.EntityFramework/Core.EntityFramework.csproj
+++ b/Source/Core.EntityFramework/Core.EntityFramework.csproj
@@ -122,7 +122,9 @@
       <Link>default.licenseheader</Link>
     </None>
     <None Include="App.config" />
-    <None Include="packages.config" />
+    <None Include="packages.config">
+      <SubType>Designer</SubType>
+    </None>
   </ItemGroup>
   <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
