--- a/Source/IdentityServer3.EntityFramework.MySql.nuspec
+++ b/Source/IdentityServer3.EntityFramework.MySql.nuspec
@@ -1,9 +1,9 @@
 <?xml version="1.0"?>
 <package >
   <metadata>
-    <id>IdentityServer3.EntityFramework.MySql</id>
+    <id>IdentityServer3.EntityFramework.Mysql</id>
     <version>0.0.0</version>
-    <title>IdentityServer3 - Entity Framework Mysql</title>
+    <title>IdentityServer3 - Entity Framework</title>
     <authors>Brock Allen, Dominick Baier, and contributors</authors>
     <owners>Brock Allen, Dominick Baier</owners>
     <projectUrl>https://github.com/IdentityServer/IdentityServer3.EntityFramework</projectUrl>
@@ -13,14 +13,14 @@
     <summary>Entity Framework-based persistence layer for IdentityServer3</summary>
     <description>Entity Framework-based persistence layer for IdentityServer3</description>
     <releaseNotes></releaseNotes>
-    <copyright>Copyright 2015</copyright>
+    <copyright>Copyright 2016</copyright>
     <tags>IdentityServer OpenID Connect OpenIDConnect OAuth2 OWIN ASP.NET Katana WebApi SSO Federation Claims Identity EF EntityFramework</tags>
 
     <dependencies>
-      <dependency id="IdentityServer3" version="2.5.0"  />
-      <dependency id="AutoMapper" version="4.2.0" />
+      <dependency id="AutoMapper" version="5.0.2" />
       <dependency id="EntityFramework" version="6.1.3" />
-      <dependency id="Newtonsoft.Json" version="7.0.1" />
+      <dependency id="IdentityServer3" version="2.5.3"  />
+      <dependency id="Newtonsoft.Json" version="9.0.1" />
     </dependencies>
   </metadata>
 </package>
